aggiunta griglia e classi tramite listener

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </header>
     <main>
-        <div class="my-container">
-            
+        <div id="my-container">
+
         </div>
     </main>
     <footer>
